	cases.
	* src/harness.c: work around Linux-PAM actively trying to keep us from
	doing what we're doing.  Adjust command-line parsing to allow both
	password-change phases to be called out.
	* tests/run-tests.c: add a password-not-good-enough-at-change-time
	test case.
	* src/password.c(pam_sm_chauthtok): cast away a couple of compiler
	warnings.

2006-01-13:
	* src/log.h,src/log.c,src/logstdio.c: add notice_user() to for spewing
	an error message at the user.
	* src/password.c(pam_sm_chauthtok): if we got a result string back from
	the password-changing server, attempt to display it.

2006-01-11:
	* src/session.c: no, I did touch that file last year.
	* src/pam_krb5.5.in: document the "ignore_afs" option.
	* src/pam_newpag.c: add.
	* src/pam_newpag.5.in: add.
	* src/pam_newpag.8.in: add.
	* src/Makefile.am: add rules for building pam_newpag.so.
	* configure.ac: generate man pages for pam_newpag.
	* src/pam_dummy_acct.c: add.
	* src/pam_dummy_chauthtok.c: add.
	* src/Makefile.am: add rules for building harness-newpag
	* src/pagsh.1: add.

2005-12-19:
	* src/items.c: include <stdio.h> to get the definition of NULL (Jesse
	Keating).
	* src/init.c: same bug, different file.

2005-11-21:
	* src/v5.c(v5_validate): don't leak the keytab file descriptor (patch
	from Daniel Colascione, #173681).

2005-11-15:
	* src/afs5log.c: actually check for AFS support first, so that the
	ioctl-only support case will work properly.

2005-11-07:
	* src/options.c: allow "validate" to be specified using a list of
	service names as well.

2005-11-07:
	* src/pam_krb5.5.in,src/pam_krb5.8.in: add proper quoting for arguments
	which include whitespace

2005-11-01:
	* src/stash.c(_pam_krb5_stash_shm_write_v5/4): initialize the segment
	key and owner in the stash when we write to it, in case the application
	decides to never call pam_end(), so that we can clean up the segment
	during session close.

2005-11-01:
	* src/stash.c,src/stash.h,src/shmem.csrc/shmem.h: log debug messages